=========
CHANGELOG
=========

1.3.2 (unreleased)
==================

- Nothing changed yet.


1.3.1 (2016-01-04)
==================

* Add Python3 compatibility (thanks Tadas Dailyda)


1.3.0 (2015-05-26)
==================

* Add Django 1.8 compatibility (thanks @markvl)


1.2.0 (2012-05-30)
==================

* Add compatibility with Ember.js with a setting (default False). See README.rst.

1.1.0 (2012-03-26)
==================

* Remove dependency to template Egg loader using template tag


1.0.1 (2012-03-16)
==================

* Fix packaging


1.0.0 (2012-03-16)
==================

* Initial working version