@@ -2,6 +2,18 @@ from django import template
 from django.conf import settings
 from django.utils import safestring, six
 
+# Token type constants moved in Django 2.1
+try:
+    from django.template.base import TokenType
+except ImportError:
+
+    class TokenType(object):
+        TEXT = template.base.TOKEN_TEXT
+        VAR = template.base.TOKEN_VAR
+        BLOCK = template.base.TOKEN_BLOCK
+        COMMENT = template.base.TOKEN_COMMENT
+
+
 register = template.Library()
 
 """
@@ -34,14 +46,14 @@ def verbatim_tags(parser, token, endtagname):
         if token.contents == endtagname:
             break
 
-        if token.token_type == template.base.TOKEN_VAR:
+        if token.token_type == TokenType.VAR:
             text_and_nodes.append('{{')
             text_and_nodes.append(token.contents)
 
-        elif token.token_type == template.base.TOKEN_TEXT:
+        elif token.token_type == TokenType.TEXT:
             text_and_nodes.append(token.contents)
 
-        elif token.token_type == template.base.TOKEN_BLOCK:
+        elif token.token_type == TokenType.BLOCK:
             try:
                 command = token.contents.split()[0]
             except IndexError:
@@ -58,7 +70,7 @@ def verbatim_tags(parser, token, endtagname):
                     raise
             text_and_nodes.append(node)
 
-        if token.token_type == template.base.TOKEN_VAR:
+        if token.token_type == TokenType.VAR:
             text_and_nodes.append('}}')
 
     return text_and_nodes
