@@ -5,7 +5,8 @@ CHANGELOG
 1.3.2 (unreleased)
 ==================
 
-- Nothing changed yet.
+- Fixed autoescape bug in handlebars_js
+- Compatible with Django 2.1/2.2
 
 
 1.3.1 (2016-01-04)
